--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
 
 # NEXT AUTH
+NEXTAUTH_URL="http://localhost/"
 NEXTAUTH_SECRET=
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=
