--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">20"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "next dev",
@@ -50,6 +50,7 @@
     "react-currency-mask": "^1.3.2",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-input-mask": "^2.0.4",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
@@ -63,6 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
