--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-currency-mask": "^1.3.2",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
